--- a/disclosure.html
+++ b/disclosure.html
@@ -19,10 +19,7 @@
 
   <main role="main" class="container">
     <h3>All relevant disclosure information.</h3> <br />
-    <p>All Khan Academy content is available for free at (<a class="link"
-        href="www.khanacademy.org">www.khanacademy.org</a>)</p>
-    <p>I did not author any of the documents included, they are someone else's work and all credit goes to them. Any
-      content added by me is on the Models pages or otherwise noted.</p>
+    <p>I have attempted to act mainly as a curator which means I did not author any of the documents included, they are someone else's work and all credit goes to them. Any content added by me is on the Models pages or otherwise noted.</p>
   </main>
 </body>
 
