--- a/models.html
+++ b/models.html
@@ -40,7 +40,8 @@
         <a role="button" class="btn btn-primary btn-sm btn-block" href="models/kruskal.html" target="myframe">Kruskal-Wallis</a>
         <a role="button" class="btn btn-primary btn-sm btn-block" href="models/binomial.html" target="myframe">Binomial</a>
         <a role="button" class="btn btn-primary btn-sm btn-block" href="models/1sampttest.html" target="myframe">One Sample T-Test</a>
-        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/1sampttest.html" target="myframe">Chi-Squared Test</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/chisquared.html" target="myframe">Chi-Squared Test</a>
+        <a role="button" class="btn btn-primary btn-sm btn-block" href="models/logreg.html" target="myframe">Logistic Regression</a>
       </div>
       <div class="col-10">
         <iframe name="myframe" src="resources/placeholder.html" height="800" width="800" frameborder="0"></iframe>
