--- a/models/1sampttest.html
+++ b/models/1sampttest.html
@@ -29,23 +29,23 @@
       </td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>Input Values</td>
+      <td>Group Mean, Standard Deviation, Number of data points or raw data</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>Output Values</td>
+      <td>t-score, p-value</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>Interpretation of Output</td>
+      <td>A large t-score indicates a larger difference between the groups.  The p-value indicates the probability that the result is caused by chance. /td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>Value of the Method</td>
+      <td>Useful when comparing two normally distributed groups when the population standard deviation is unknown.</td>
     </tr>
     <tr>
-      <td></td>
+      <td>Example</td>
       <td></td>
     </tr>
   </table>
