--- a/resources/pptandvids.html
+++ b/resources/pptandvids.html
@@ -27,51 +27,14 @@
       </thead>
       <tbody>
         <tr>
-          <td>Linear Regression</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EfhZbYtvDcpDnd8LNSwLDGAB8bwxrsEkFQzJDHOJkz4KZA?e=NLcHtv">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=423af52f-3d59-4200-ac40-ab560167a151" target="myFrame">Video</a>
-          </td>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 3</td>
         </tr>
         <tr>
-          <td>Logistic Regression</td>
+          <td>Introducion to T-Tests</td>
           <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EUQUBQlHQZxCgPK1a9NmxxEBjmUPeVLIS8cv-IyK9VTdcQ?e=cn2K78">Powerpoint</a>
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EW_DB0c0FFFGoaZh1wPgLxYB9DAMZzo6ObD_Klqar1053A?e=iLoen9">Powerpoint</a>
             / <a style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EUQUBQlHQZxCgPK1a9NmxxEBjmUPeVLIS8cv-IyK9VTdcQ?e=cn2K78" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>Chi-Square's Three Tests, calculate Chi-Square, and the p-value</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/ESXu5K_xR-1KkTVEUIUYNmMBMuF3L0Y_CCrV86cePz3kiQ?e=ArDRf7">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8154153e-e3b2-4951-99c1-ab8700035862" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>Fisher's Exact Test, Risk Ratio, Odds Ratio</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=17f7dd15-e0f2-4ed2-bfb9-aba90188e891">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=17f7dd15-e0f2-4ed2-bfb9-aba90188e891" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>Wald Test and Likelihood Ratio Test</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EU_nincAlqFHuDMpdgKPSVMB6m51aupN2-a18rzYbYlCAA?e=bqGRSa">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=11fb791d-8c05-4140-aab8-aaf5010a8d0a" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>Relative Risk Ratio, Odds Ratio, and AIC</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EdE37s4lg-RPoE58CHwzUKoBearjU_IB_JYs4fos2gN_6w?e=avcK8Y">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=78998aa5-3ad4-476c-8fd8-ab100126f88a" target="myFrame">Video</a>
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bb2305b6-b4c8-4dd0-b1ba-aaa6016ef430" target="myFrame">Video</a>
           </td>
         </tr>
         <tr>
@@ -83,19 +46,11 @@
           </td>
         </tr>
         <tr>
-          <td>Distributions and Scree Plots</td>
+          <td>F Statistic and ANOVA table</td>
           <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EZkjP9TNGzFBiHIWQ1bEDU4BeNfTFDLE4SvCVd5fwEitvQ?e=tsIHn8">Powerpoint</a>
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EUYZF819XSRHl2I6ZgboUCcBuFDBpL-syhm7syquU_lWjA?e=q5MtQ7">Powerpoint</a>
             / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3e655ef3-0797-4c56-ab83-a9ca00d29ced" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>MLR and Logistic Regression</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/ERD1dA9x9sFEoR16_yaONgcBQIZK_VdeLJiGYD8X0V1t8Q?e=sd7tQN">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dfc2da98-5ac7-47b7-a972-a9e300d8f274" target="myFrame">Video</a>
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=67463450-723a-44d6-a9af-aa8301612a2b" target="myFrame">Video</a>
           </td>
         </tr>
         <tr>
@@ -107,7 +62,10 @@
           </td>
         </tr>
         <tr>
-          <td>Difference between statistical tests</td>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 4</td>
+        </tr>
+        <tr>
+          <td>Choosing between statistical tests</td>
           <td><a target="_blank" style="text-decoration: underline;"
               href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EV18W6D_LvNIvTXyJGssUoQBn5LCaTBvkIrx9yhmYM9hwQ?e=qj9rZ8">Powerpoint</a>
             / <a style="text-decoration: underline;"
@@ -115,25 +73,14 @@
           </td>
         </tr>
         <tr>
-          <td>Correlation</td>
-          <td><a target="_blank" style="text-decoration: underline;" href="">Powerpoint</a> / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=69b4f35d-0368-4c02-b62d-aa6701721a83" target="myFrame">Video</a>
-          </td>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 5</td>
         </tr>
         <tr>
-          <td>F Statistic and ANOVA table</td>
+          <td>Fisher's Exact Test, Risk Ratio, Odds Ratio</td>
           <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EUYZF819XSRHl2I6ZgboUCcBuFDBpL-syhm7syquU_lWjA?e=q5MtQ7">Powerpoint</a>
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=17f7dd15-e0f2-4ed2-bfb9-aba90188e891">Powerpoint</a>
             / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=67463450-723a-44d6-a9af-aa8301612a2b" target="myFrame">Video</a>
-          </td>
-        </tr>
-        <tr>
-          <td>Introducion to T-Tests</td>
-          <td><a target="_blank" style="text-decoration: underline;"
-              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EW_DB0c0FFFGoaZh1wPgLxYB9DAMZzo6ObD_Klqar1053A?e=iLoen9">Powerpoint</a>
-            / <a style="text-decoration: underline;"
-              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bb2305b6-b4c8-4dd0-b1ba-aaa6016ef430" target="myFrame">Video</a>
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=17f7dd15-e0f2-4ed2-bfb9-aba90188e891" target="myFrame">Video</a>
           </td>
         </tr>
         <tr>
@@ -142,6 +89,99 @@
               href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EbnJhRb_VHdLigWoGxZuq9oBoY8W3jKnY-eXqBVkt4YXqA?e=jde9Ey">Powerpoint</a>
             / <a style="text-decoration: underline;" 
               href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9fe32bb9-0919-4f99-8e68-aade012a2465" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Chi-Square's Three Tests, calculate Chi-Square, and the p-value</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/ESXu5K_xR-1KkTVEUIUYNmMBMuF3L0Y_CCrV86cePz3kiQ?e=ArDRf7">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8154153e-e3b2-4951-99c1-ab8700035862" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+        <tr>
+          <td>Chi-Square</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EbnJhRb_VHdLigWoGxZuq9oBoY8W3jKnY-eXqBVkt4YXqA?e=jde9Ey">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=9fe32bb9-0919-4f99-8e68-aade012a2465" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 6</td>
+        </tr>
+        <tr>
+          <td>Principal Component Analysis</td>
+          <td><a target="_blank" style="text-decoration: underline;" href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/ESjyLnoDJDNMukJdn6q7giYBL76jK0qAHfrGWPAl3ZiiKA?e=RRM2Hn">Powerpoint</a> / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e4cc888f-5e93-407e-9779-abc500dbe173" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Correlation</td>
+          <td><a target="_blank" style="text-decoration: underline;" href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EfuZGQJIU_BBh266VGwblH0B7qpZ5rJvOspDnOWbz-9MVg?e=VHL6A9">Powerpoint</a> / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=69b4f35d-0368-4c02-b62d-aa6701721a83" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Distributions and Scree Plots</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EZkjP9TNGzFBiHIWQ1bEDU4BeNfTFDLE4SvCVd5fwEitvQ?e=tsIHn8">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3e655ef3-0797-4c56-ab83-a9ca00d29ced" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 7</td>
+        </tr>
+          <td>Linear Regression</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EfhZbYtvDcpDnd8LNSwLDGAB8bwxrsEkFQzJDHOJkz4KZA?e=NLcHtv">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=423af52f-3d59-4200-ac40-ab560167a151" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>MLR and Logistic Regression</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/ERD1dA9x9sFEoR16_yaONgcBQIZK_VdeLJiGYD8X0V1t8Q?e=sd7tQN">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dfc2da98-5ac7-47b7-a972-a9e300d8f274" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Multiple Regression</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EbTqK4h_ZR5Juyxkz38xy4wBVbFhdmq3n_edkCggjc4Rnw?e=ZEcgcd">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7faffaf4-50ad-4620-9165-ac0400edd0ff" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2" style="text-align:center; color:cornflowerblue;">Chapter 8</td>
+        </tr>
+        <tr>
+          <td>Logistic Regression</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EUQUBQlHQZxCgPK1a9NmxxEBjmUPeVLIS8cv-IyK9VTdcQ?e=cn2K78">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=b9c0d1ca-af99-43b3-8535-ab6b000a577c" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Relative Risk Ratio, Odds Ratio, and AIC</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EdE37s4lg-RPoE58CHwzUKoBearjU_IB_JYs4fos2gN_6w?e=avcK8Y">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=78998aa5-3ad4-476c-8fd8-ab100126f88a" target="myFrame">Video</a>
+          </td>
+        </tr>
+        <tr>
+          <td>Wald Test and Likelihood Ratio Test</td>
+          <td><a target="_blank" style="text-decoration: underline;"
+              href="https://westerngovernorsuniversity-my.sharepoint.com/:p:/g/personal/william_sewell_wgu_edu/EU_nincAlqFHuDMpdgKPSVMB6m51aupN2-a18rzYbYlCAA?e=bqGRSa">Powerpoint</a>
+            / <a style="text-decoration: underline;"
+              href="https://wgu.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=11fb791d-8c05-4140-aab8-aaf5010a8d0a" target="myFrame">Video</a>
           </td>
         </tr>
       </tbody>
