--- a/resources/riskratio.html
+++ b/resources/riskratio.html
@@ -20,7 +20,7 @@
   <br />
 
   <iframe width="700" height="600" scrolling="no"
-    src="https://onedrive.live.com/embed?resid=81230A40BC3ADFA7%213685&authkey=%21AOOVnncUgtbjIwE&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
+    src="https://onedrive.live.com/embed?cid=81230A40BC3ADFA7&resid=81230A40BC3ADFA7%213969&authkey=AGsftlKzB0_5K_Y&em=2&wdAllowInteractivity=False&wdHideGridlines=True&wdDownloadButton=True&wdInConfigurator=True"></iframe>
 </body>
 
 </html>
