--- a/resources/studentadvice.html
+++ b/resources/studentadvice.html
@@ -373,6 +373,8 @@
     </div>
     <br />
   </main>
+  <footer><br /><strong>**This was originally written a few years ago so the links may or may not still be functional**</strong>
+    </footer>
 </body>
 
 </html>
